# atlas-ra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: .env.example  pyproject.toml
backend/evals/: harness.py  results.jsonl  run_evals.py
backend/evals/cases/: lora_oom_recovery.md  streamdiffusion_torch_order.md  wan22_vram_math.md
backend/src/atlas/: __init__.py  cli.py  config.py  events.py
backend/src/atlas/api/: main.py
backend/src/atlas/comms/: __init__.py  email_adapter.py  email_watcher.py  notify.py
backend/src/atlas/executors/: __init__.py  approvals.py  registry.py
backend/src/atlas/ingest/: __init__.py  pipeline.py  procedures.py
backend/src/atlas/memory/: __init__.py  episodic.py  procedural.py  semantic.py
backend/src/atlas/observability/: __init__.py  tracing.py
backend/src/atlas/orchestrator/: __init__.py  core.py
backend/src/atlas/providers/: __init__.py  base.py  claude.py  langgraph.py  ollama.py  registry.py
backend/src/atlas/teams/: __init__.py  critic.py  ops.py  research.py  systems.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_comms.py  test_critic.py  test_e2e.py  test_evals.py  test_executors.py  test_ingest.py  test_ledger.py  test_memory.py  test_orchestrator.py  test_providers.py  test_routing.py  test_skills.py
docs/: ARCHITECTURE.md  DATA_MODELS.md  OPERATIONS.md  REQUIREMENTS_AUDIT.md  ROADMAP.md  VERSIONS.md
frontend/: package-lock.json  package.json
scripts/: launch_streamdiffusion_demo.ps1
skills/: comfyui-lora-training.md  wan22-under-10gb.md  (+2 more)
(+21 files in other folders)
